# upwork-cli

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml  ruff.toml
src/upwork_cli/: __init__.py  __main__.py  upcli.py  utils.py
